src/libsrcml/srcml.h

/**@}*/

/**@{ @name Status */
/** Return status indicating no errors */
#define SRCML_STATUS_OK                   0
/**@}*/
/**@}*/
/**@}*/

/**
 * @struct srcml_archive
 *
 * Encapsulates multiple srcML units into one srcML archive
 */
struct srcml_archive;
/**
 * @struct srcml_unit
 *
 * The srcML markup of one source-code file
 */
struct srcml_unit;
/**
 * The current version of the srcml markup
 *
 * @return Version of the srcml markup as a string
 */
LIBSRCML_DECL const char* srcml_version_string();
/**@}*/

/** @defgroup archive Archive
    @{
*/
/**
 * Create a new srcml archive
 * @note Archive must be freed using srcml_archive_free()
 * @return The created srcml_archive
 */
LIBSRCML_DECL struct srcml_archive* srcml_archive_create();
/**
 * Clone the setup of an existing archive
 * @note Archive must be freed using srcml_archive_free()
 * @param archive A srcml_archive
 * @return The cloned archive
 */
LIBSRCML_DECL struct srcml_archive* srcml_archive_clone(const struct srcml_archive* archive);
/**
 * Close a srcml_archive opened using srcml_archive_read_open_*() or srcml_archive_write_open_*().
 * The archive can be reopened.
 * @param archive An open srcml_archive
 */
LIBSRCML_DECL void srcml_archive_close(struct srcml_archive* archive);
/**
 * Free a srcml archive that was previously allocated
 * by using srcml_archive_create() or srcml_archive_clone(). The archive must be reallocated/re-created to use again.
 * @param archive A srcml_archive
 */
LIBSRCML_DECL void srcml_archive_free(struct srcml_archive* archive);
/**
 * Open up a srcml_archive for writing to a given memory buffer
 * @param archive A srcml_archive
 * @param buffer Location to return output string. The buffer is allocated
 * and set to the location the buffer points at. The buffer must be freed after use
 * @param size the size of the resulting buffer
 * @note The buffer must be freed after use
 * @return SRCML_STATUS_OK on success
 * @return Status error code on failure
 */
LIBSRCML_DECL int srcml_archive_write_open_memory(struct srcml_archive* archive, char** buffer, size_t * size);
/**
 * Open up a srcml_archive for writing to an io context using writeand close callbacks
 * @param archive A srcml_archive
 * @param context An io context
 * @param write_callback A write callback function
 * @param close_callback A close callback function
 * @return SRCML_STATUS_OK on success
 * @return Status error code on failure
 */
LIBSRCML_DECL int srcml_archive_write_open_io(struct srcml_archive* archive, void * context, int (*write_callback)(void * context, const char* buffer, int len), int (*close_callback)(void * context));
/**
 * Open a srcML archive for reading from a buffer up until a buffer_size
 * @param archive A srcml_archive
 * @param buffer An input buffer
 * @param buffer_size Size of the input buffer
 * @retval SRCML_STATUS_OK on success
 * @retval SRCML_STATUS_IO_ERROR
 */
LIBSRCML_DECL int srcml_archive_read_open_memory(struct srcml_archive* archive, const char* buffer, size_t buffer_size);
/**
 * Open a srcML archive for reading from the opened context, accessed via read and close callbacks
 * @param archive A srcml_archive
 * @param context An io context
 * @param read_callback A read callback function
 * @param close_callback A close callback function
 * @retval SRCML_STATUS_OK on success
 * @retval SRCML_STATUS_IO_ERROR
 */
LIBSRCML_DECL int srcml_archive_read_open_io(struct srcml_archive* archive, void * context, int (*read_callback)(void * context, char* buffer, int len), int (*close_callback)(void * context));
/**
 * Set the XML encoding of the srcML archive
 * @param archive The srcml_archive to set the encoding
 * @param encoding The encoding of the archive
 * @retval SRCML_STATUS_OK on success @retval SRCML_STATUS_INVALID_ARGUMENT
 */
LIBSRCML_DECL int srcml_archive_set_xml_encoding(struct srcml_archive* archive, const char* encoding);
/**
 * Set the default source encoding for the srcML archive
 * @param archive The srcml_archive to set the source encoding for
 * @param encoding A source-code encoding
 * @retval SRCML_STATUS_OK on success
 * @retval SRCML_STATUS_INVALID_ARGUMENT
 */
LIBSRCML_DECL int srcml_archive_set_src_encoding(struct srcml_archive* archive, const char* encoding);
/**
 * Set the language of the srcML archive
 * @param archive A srcml_archive to set the source-code language on
 * @param language A source-code language
 * @retval SRCML_STATUS_OK on success
 * @retval SRCML_STATUS_INVALID_ARGUMENT
 */
LIBSRCML_DECL int srcml_archive_set_language(struct srcml_archive* archive, const char* language);
/**
 * @param archive A srcml_archive
 * @return The currently set root url attribute, or NULL
 */
LIBSRCML_DECL const char* srcml_archive_get_url(const struct srcml_archive* archive);
/**
 * @param archive A srcml_archive
 * @return The currently set options
 */
LIBSRCML_DECL int srcml_archive_get_options(const struct srcml_archive* archive);
/**
 * Read the next unit from the archive
 * @param archive A srcml_archive open for reading
 * @return The read srcml_unit on success
 * @return NULL on failure
 */
LIBSRCML_DECL struct srcml_unit* srcml_archive_read_unit(struct srcml_archive* archive);
/**@}*/
/**@}*/

/** @defgroup unit Unit
    @{
*/
/**
 * Create a new srcml_unit tied to the srcml archive
 * @param archive A srcml_archive
 * @note The unit must be freed using srcml_unit_free()
 * @returns Created srcml_unit on success
 * @return NULL on failure
 */
LIBSRCML_DECL struct srcml_unit* srcml_unit_create(struct srcml_archive* archive);
/**
 * Free an allocated unit
 * @param unit The srcml unit to free
 */
LIBSRCML_DECL void srcml_unit_free(struct srcml_unit* unit);
/**@{ @name Setup options */
/**
 * Set the source-code encoding for the srcml unit
 * @param unit A srcml_unit
 * @param encoding A source-code encoding
 * @retval SRCML_STATUS_OK on success
 * @retval SRCML_STATUS_INVALID_ARGUMENT
 */
LIBSRCML_DECL int srcml_unit_set_src_encoding(struct srcml_unit* unit, const char* encoding);
/**
 * Set the source-code language for the srcml unit
 * @param unit A srcml_unit
 * @param language A supported source-code language
 * @retval SRCML_STATUS_OK on success
 * @retval SRCML_STATUS_INVALID_ARGUMENT
 */
LIBSRCML_DECL int srcml_unit_set_language(struct srcml_unit* unit, const char* language);
/**
 * Convert the contents of the src_buffer to srcML and store in the unit
 * @param unit A srcml_unit to parse the results to
 * @param src_buffer Buffer containing source code to parse into srcML
 * @param buffer_size Size of the buffer to parse
 * @return SRCML_STATUS_OK on success
 * @return Status error code on failure.
 */
LIBSRCML_DECL int srcml_unit_parse_memory(struct srcml_unit* unit, const char* src_buffer, size_t buffer_size);
/**
 * Convert the srcML in a unit into source code and place it into a buffer
 * The buffer is allocated in the function and needs to be freed after using.
 * @param unit A srcml unit opened for reading
 * @param src_buffer An output buffer address
 * @param src_size The size of the resulting buffer
 * @note The output buffer must be freed after using
 * @return SRCML_STATUS_OK on success
 * @return Status error code on failure
 */
LIBSRCML_DECL int srcml_unit_unparse_memory(struct srcml_unit* unit, char** src_buffer, size_t * src_size);
/**
 * Convert the srcML in a unit into source code and output using write callbacks
 * @param unit A srcml unit opened for reading
 * @param context
 * @param write_callback a write callback function
 * @param close_callback a close callback function
 * @return SRCML_STATUS_OK on success
 * @return Status error code on failure
 */
LIBSRCML_DECL int srcml_unit_unparse_io(struct srcml_unit* unit, void * context, int (*write_callback)(void * context, const char* buffer, int len), int (*close_callback)(void * context));